--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ analytics:
 # Site Author
 author:
   name: "Dam.oments" # 블로그 닉네임
-  avatar: "/assets/images/meee.png" # 블로그 프로필 사진
+  avatar: "/assets/images/Junimo.gif" # 블로그 프로필 사진
   #   bio              : "hi all!"
   location         : "Dublin, Ireland"
   # email            : "youremailhere@xxxxxx.com"
