--- a/_config.yml
+++ b/_config.yml
@@ -24,13 +24,13 @@ title_separator: "&#124;"
 subtitle: # site tagline that appears below site title in masthead
 name: "Dam.oments" # 블로그 닉네임 설정
 description: "MemoryKeeper for the IT journey" # 블로그 설명
-url: "https://yudamblog.github.io" # 블로그 URL
+url: "https://yudam33.github.io" # 블로그 URL
 baseurl: # the subpath of your site, e.g. "/blog"
-repository: "github-account/yudamblog.github.io" # GitHub Repo 이름
+repository: "github-account/yudam33.github.io" # GitHub Repo 이름
 teaser: #
 
-# logo                     : # 블로그명 앞에 로고 추가하고 싶을 경우 사용
-masthead_title: # overrides the website title displayed in the masthead, use " " for no title
+logo: # 블로그명 앞에 로고 추가하고 싶을 경우 사용
+masthead_title: "/assets/images/Rabbit.png" # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute: 200
 comments:
@@ -99,9 +99,9 @@ analytics:
 # Site Author
 author:
   name: "Dam.oments" # 블로그 닉네임
-  avatar: "/assets/images/Junimo.gif" # 블로그 프로필 사진
-  #   bio              : "hi all!"
-  location         : "Dublin, Ireland"
+  avatar: "/assets/images/Rabbit.png" # 블로그 프로필 사진
+  # bio              : "MemoryKeeper for the IT journey"
+  # location         : "Dublin, Ireland"
   # email            : "youremailhere@xxxxxx.com"
 
   links: # 사이트 링크
