--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ baseurl: # the subpath of your site, e.g. "/blog"
 repository: "github-account/yudam33.github.io" # GitHub Repo 이름
 teaser: #
 
-logo: # 블로그명 앞에 로고 추가하고 싶을 경우 사용
-masthead_title: "/assets/images/Rabbit.png" # overrides the website title displayed in the masthead, use " " for no title
+logo: "/assets/images/Rabbit.png" # 블로그명 앞에 로고 추가하고 싶을 경우 사용
+#masthead_title:  # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute: 200
 comments:
