--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,13 @@
 # main links
 main:
   - title: "Home"
-    url: https://choiiis.github.io/
+    url: https://yudam33.github.io/
 
   - title: "About"
     url: /about/
 
   - title: "GitHub"
-    url: https://github.com/choiiis
+    url: https://github.com/Yudam33
 
   # - title: "Projects"
   #   url: /projects/
@@ -18,11 +18,11 @@ main:
 # sidebar navigation (categories)
 # 2022.02.15 sidebar update : simple ver.
 categories:
-  - title: "Categories1"
-    url: /categories/categories1/
-  - title: "Categories2"
+  - title: "Python/SQL"
+    url: /categories/Conversational AI/
+  - title: "Conversational AI"
     url: /categories/categories2/
-  - title: "Categories3"
+  - title: "LLMs"
     url: /categories/categories3/
-  - title: "Categories4"
+  - title: "PM tools"
     url: /categories/categories4/
