--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,11 +18,11 @@ main:
 # sidebar navigation (categories)
 # 2022.02.15 sidebar update : simple ver.
 categories:
-  - title: "Python/SQL"
-    url: /categories/Conversational AI/
   - title: "Conversational AI"
-    url: /categories/categories2/
+    url: /categories/Conversational AI/
   - title: "LLMs"
-    url: /categories/categories3/
-  - title: "PM tools"
-    url: /categories/categories4/
+    url: /categories/LLMs/
+  - title: "flask"
+    url: /categories/flask/
+  - title: "Python"
+    url: /categories/python/
